# Transazioni_Gandini

./: CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  GestoreFile.cpp  GestoreFile.h  Transazione.cpp  Transazione.h  main.cpp  transazioni.txt
test/: CMakeLists.txt  ContoCorrenteTest.cpp  TransazioniFixture.cpp  TransazioniTest.cpp
